--- a/templates/index.html
+++ b/templates/index.html
@@ -9,22 +9,22 @@
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
 	</head>
 
-	{% if weather %}
+	{% if weather_success %}
 	<body>
 		<table>
-			<tr><td class="bold">Location:</td><td>{{ weather.location }}</td></tr>
-			<tr><td class="bold">Time & Date:</td><td>{{ weather.time }}, {{ weather.date }}</td></tr>
-			<tr><td class="bold">Temperature:</td><td>{{ weather.temp }} F</td></tr> 
-			<tr><td class="bold">Cloud Cover:</td><td>{{ weather.cloudcover }}%</td></tr> 
-			<tr><td class="bold">Conditions:</td><td>{{ weather.conditions }}</td></tr>
-			<tr><td class="bold">Humidity:</td><td>{{ weather.humidity }}%</td></tr>
-			<tr><td class="bold">Wind Speed:</td><td>{{ weather.windspeed }} MPH</td></tr>
+			<tr><td class="bold">Location:</td><td>{{ weather_success.location }}</td></tr>
+			<tr><td class="bold">Time & Date:</td><td>{{ weather_success.time }}, {{ weather_success.date }}</td></tr>
+			<tr><td class="bold">Temperature:</td><td>{{ weather_success.temp }} F</td></tr> 
+			<tr><td class="bold">Cloud Cover:</td><td>{{ weather_success.cloudcover }}%</td></tr> 
+			<tr><td class="bold">Conditions:</td><td>{{ weather_success.conditions }}</td></tr>
+			<tr><td class="bold">Humidity:</td><td>{{ weather_success.humidity }}%</td></tr>
+			<tr><td class="bold">Wind Speed:</td><td>{{ weather_success.windspeed }} MPH</td></tr>
 		</table>
 	</body>
 	{% endif %}
 
-	{% if error %}
-	<p>{{ error }}</p>
+	{% if weather_error %}
+	<p>{{ weather_error }}</p>
 	{% endif %}
 
 </html>
