--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 	<head>
 		<meta charset="utf-8">
 		<title>PiInfo</title>
@@ -9,8 +8,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
 	</head>
 
-	{% if weather_success %}
 	<body>
+		{% if weather_success %}
 		<table>
 			<tr><td class="bold">Location:</td><td>{{ weather_success.location }}</td></tr>
 			<tr><td class="bold">Time & Date:</td><td>{{ weather_success.time }}, {{ weather_success.date }}</td></tr>
@@ -20,11 +19,23 @@
 			<tr><td class="bold">Humidity:</td><td>{{ weather_success.humidity }}%</td></tr>
 			<tr><td class="bold">Wind Speed:</td><td>{{ weather_success.windspeed }} MPH</td></tr>
 		</table>
+		{% endif %}
+
+		{% if weather_error %}
+		<p>{{ weather_error }}</p>
+		{% endif %}
+
+		{% if news_articles %}
+		<ul>
+			{% for i in range(5) %}
+			<li>{{ news_articles[i] }} (<a href="{{ news_urls[i] }}" target=_blank>link</a>)</li>
+			{% endfor %}
+		</ul>
+		{% endif %}
+
+		{% if news_error %}
+		<p>{{ news_error }}</p>
+		{% endif %}
+
 	</body>
-	{% endif %}
-
-	{% if weather_error %}
-	<p>{{ weather_error }}</p>
-	{% endif %}
-
 </html>
