--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,11 @@ td {
     padding-right: 24px;
 }
 
+ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
 .bold {
     font-weight: 700;
 }
